# adk-streaming-guide

./: .gitignore  CLAUDE.md  README.md  STYLES.md  pyproject.toml
.claude/agents/: adk-reviewer.md  change-reviewer.md  docs-reviewer.md
.claude/skills/code-lint/: SKILL.md
.devcontainer/: README.md  devcontainer.json  post-create.sh
.github/: WORKFLOWS.md
.github/workflows/: adk-version-monitor.yml
.kiro/steering/: product.md  structure.md  tech.md
.serena/: project.yml
.serena/memories/: code_style_and_conventions.md  project_overview.md  suggested_commands.md  task_completion_checklist.md
app/: .env.template  Dockerfile  cleanup.sh  deploy.sh  main.py
app/frontend/: components.json  package.json  tsconfig.json  vite.config.ts
app/my_agent/: agent.py
app/static/: index.html  manifest.webmanifest  service-worker.js
docs/: new_ui_design.pen  part1.md  part2.md  part3.md  part4.md  part5.md
frontend/: bun.lockb  index.html  tsconfig.json  vite.config.ts
frontend/__tests__/: App.test.tsx  app-state.test.ts  connection-state-machine.test.ts
frontend/src/: App.tsx  main.tsx  styles.css
overrides/partials/: nav.html  source.html
src/bidi-demo/: README.md
workshops/: outline.md  workshop.md  workshop2.md  workshop_ja.md
workshops/src/: pyproject.toml  step3_main.py  step5_main.py  step6_main.py
workshops/src/app/: main.py  step1_main.py  step3_main.py  step4_main.py  step5_main.py  step6_main.py  step7_main.py  step8_main.py
workshops/src/app/my_agent/: agent.py
workshops/src/app/static/js/: app.js
workshops/src/my_agent/: agent.py
(+54 files in other folders)
